[package]
name = "netstring"
version = "0.1.0"
authors = ["Ignacio Corderi <icorderi@msn.com>"]
homepage = "https://icorderi.github.io/yacli/"
repository = "https://github.com/icorderi/yacli/"
documentation = "https://icorderi.github.io/yacli/doc/yacli/"
description = "Library for encoding and decoding netstrings"
keywords = [ "network", "protocol", "netstring" ]
readme = "README.md"
license = "MIT"