[package]
name = "netstring"
version = "0.1.1"
authors = ["Ignacio Corderi <icorderi@msn.com>"]
homepage = "https://icorderi.github.io/netstring/"
repository = "https://github.com/icorderi/rust-netstring/"
documentation = "https://icorderi.github.io/netstring/doc/netstring/"
description = "Library for encoding and decoding netstrings"
keywords = [ "network", "protocol", "netstring" ]
readme = "README.md"
license = "MIT"