[package]
name = "netstring"
version = "0.4.1"
authors = ["Ignacio Corderi <icorderi@msn.com>"]

keywords = [ "netstring", "network", "encoding" ]
description = "Library for encoding and decoding netstrings"

homepage = "https://icorderi.github.io/netstring/"
repository = "https://github.com/icorderi/rust-netstring/"
documentation = "https://icorderi.github.io/netstring/doc/netstring/"

readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
log = "0.3"
